--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -12,9 +12,14 @@
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
         android:background="@color/white"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="5dp"
+        app:cardUseCompatPadding="true"
+        app:cardPreventCornerOverlap="false"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,14 +29,21 @@
 
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_margin="10dp"
-                app:srcCompat="@drawable/r" />
+                android:layout_width="65dp"
+                android:layout_height="65dp"
+                android:layout_gravity="center"
+                android:layout_marginVertical="10dp"
+                android:adjustViewBounds="true"
+                android:src="@drawable/r"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
 
             <TextView
                 android:id="@+id/textView3"
-                android:layout_width="331dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:gravity="center"
@@ -42,10 +54,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:ems="10"
-                android:gravity="center"
-                android:hint="Room Cde"
-                android:inputType="textPersonName" />
+                android:background="@drawable/custom_input"
+                android:drawableStart="@drawable/custom_meet_room_icon"
+                android:drawablePadding="10dp"
+                android:hint="Room Code"
+                android:inputType="text"
+                android:minHeight="48dp"
+                android:paddingStart="10dp" />
 
             <Button
                 android:id="@+id/joinbtn"
@@ -58,7 +73,7 @@
                 android:id="@+id/sharebtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_margin="10dp"
                 android:text="SHARE" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
